// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf rata ely ei osoitetta 1`] = `
"ELY/456



Ilmoitus suunnitelman nähtäville asettamisesta
Hyvä suunnittelualueen kiinteistönomistaja,
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) on laatinut ratalain (110/2007) mukaisen ratasuunnitelman: Projekti 1.
Hankkeen kuvaus
Suunnitelma pidetään yleisesti nähtävänä 1.1.2024 - 8.2.2024 osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo.



Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus. (ratalaki 22 §). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 8.2.2024 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo tai toimittamalla se Uudenmaan ELY-keskuksen kirjaamoon osoitteeseen kirjaamo@ely.fi. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus ELY/456.



Tämä ilmoitus on lähetetty kaikille niille kiinteistön omistajille ja haltijoille (ratalaki 22 § 3 mom):

	- joiden kiinteistöltä suunnitelman mukaan lunastetaan aluetta,
	- joiden kiinteistön alueelle muodostuu suoja- tai näkemäalue,
	- joiden kiinteistön alueeseen perustetaan muu oikeus tai
	- joiden kiinteistö rajoittuu rautatiealueeseen.
Maanomistustietojen mukaan omistatte kiinteistön suunnitelma-alueella. Mikäli kiinteistönne on vuokrattu, toivomme, että tiedotatte suunnitelman nähtäville asettamisesta vuokralaisianne.
Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.ely-keskus.fi/tietosuoja-ja-henkilotietojen-kasittely.



Teppo ProjektipäällikköProjektipäällikköUudenmaan ELY-keskus
Lisätietoja antaa 
Testi Teppo (Helsinki), 
puh. 029, test(at)vayla.fi 
JakeluErillisen jakelun mukaanJakelun osoitetiedot on haettu kiinteistötietojärjestelmästä ja yritystietojärjestelmästäTiedoksiUudenmaan ELY-keskuksen kirjaamo"
`;

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf rata ely osoitetiedoilla 1`] = `
"VäylävirastoPL 3300521 HELSINKITessa TestiläHenrikintie 14 B00370 HELSINKIELY/456













Ilmoitus suunnitelman nähtäville asettamisesta
Hyvä suunnittelualueen kiinteistönomistaja,
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) on laatinut ratalain (110/2007) mukaisen ratasuunnitelman: Projekti 1.
Hankkeen kuvaus
Suunnitelma pidetään yleisesti nähtävänä 1.1.2024 - 8.2.2024 osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo.



Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus. (ratalaki 22 §). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 8.2.2024 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo tai toimittamalla se Uudenmaan ELY-keskuksen kirjaamoon osoitteeseen kirjaamo@ely.fi. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus ELY/456.



Tämä ilmoitus on lähetetty kaikille niille kiinteistön omistajille ja haltijoille (ratalaki 22 § 3 mom):

	- joiden kiinteistöltä suunnitelman mukaan lunastetaan aluetta,
	- joiden kiinteistön alueelle muodostuu suoja- tai näkemäalue,
	- joiden kiinteistön alueeseen perustetaan muu oikeus tai
	- joiden kiinteistö rajoittuu rautatiealueeseen.
Maanomistustietojen mukaan omistatte kiinteistön suunnitelma-alueella. Mikäli kiinteistönne on vuokrattu, toivomme, että tiedotatte suunnitelman nähtäville asettamisesta vuokralaisianne.
Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.ely-keskus.fi/tietosuoja-ja-henkilotietojen-kasittely.



Teppo ProjektipäällikköProjektipäällikköUudenmaan ELY-keskus
Lisätietoja antaa 
Testi Teppo (Helsinki), 
puh. 029, test(at)vayla.fi 
Jakelu


Erillisen jakelun mukaanJakelun osoitetiedot on haettu kiinteistötietojärjestelmästä ja yritystietojärjestelmästäTiedoksiUudenmaan ELY-keskuksen kirjaamoELY/456


"
`;

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf rata vaylavirasto osoitetiedoilla 1`] = `
"VäylävirastoPL 3300521 HELSINKITessa TestiläHenrikintie 14 B00370 HELSINKIVAYLA/123













Ilmoitus suunnitelman nähtäville asettamisesta
Hyvä suunnittelualueen kiinteistönomistaja,
Väylävirasto on laatinut ratalain (110/2007) mukaisen ratasuunnitelman: Projekti 1.
Hankkeen kuvaus
Suunnitelma pidetään yleisesti nähtävänä 1.1.2024 - 8.2.2024 osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo.



Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus. (ratalaki 22 §). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 8.2.2024 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo tai toimittamalla se Väyläviraston kirjaamoon osoitteeseen kirjaamo@vayla.fi. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus VAYLA/123.



Tämä ilmoitus on lähetetty kaikille niille kiinteistön omistajille ja haltijoille (ratalaki 22 § 3 mom):

	- joiden kiinteistöltä suunnitelman mukaan lunastetaan aluetta,
	- joiden kiinteistön alueelle muodostuu suoja- tai näkemäalue,
	- joiden kiinteistön alueeseen perustetaan muu oikeus tai
	- joiden kiinteistö rajoittuu rautatiealueeseen.
Maanomistustietojen mukaan omistatte kiinteistön suunnitelma-alueella. Mikäli kiinteistönne on vuokrattu, toivomme, että tiedotatte suunnitelman nähtäville asettamisesta vuokralaisianne.
Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.vayla.fi/tietosuoja.



Teppo ProjektipäällikköProjektipäällikköVäylävirasto
Lisätietoja antaa 
Testi Teppo (Helsinki), 
puh. 029, test(at)vayla.fi 
Jakelu


Erillisen jakelun mukaanJakelun osoitetiedot on haettu kiinteistötietojärjestelmästä ja yritystietojärjestelmästäTiedoksiVäyläviraston kirjaamoVAYLA/123


"
`;

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf rata vaylavirasto osoitetiedoilla ruotsi 1`] = `
"VäylävirastoPL 3300521 HELSINKITessa TestiläHenrikintie 14 B00370 HELSINKIVAYLA/123













(sv) Ilmoitus suunnitelman nähtäville asettamisesta
Bästa fastighetsägare i planeringsområdet,
Trafikledsverket har utarbetat en järnvägsplan enligt banlagen (110/2007): Projekti 1 på svenska.
Hankkeen kuvaus på svenska
Planen hålls offentligt framlagd 1.1.2024 - 8.2.2024 på adressen https://localhost:3000/sv/s/lyhytOsoite/nahtavillaolo.



Fastighetsägare och andra sakägare samt de vars boende, arbete eller övriga förhållanden påverkas av planen har möjlighet att göra en anmärkning med anledning av planen. (banlagen 22 §). Anmärkningen ska göras före utgången av den tid under vilken planen är framlagd, senast 8.2.2024.
Anmärkningen kan göras på adressen https://localhost:3000/sv/s/lyhytOsoite/nahtavillaolo eller genom att skicka den till Trafikledsverket registratorskontor på adressen kirjaamo@vayla.fi. Till en anmärkning som skickas till registratorskontoret ska VAYLA/123 fogas.



Detta tillkännagivande har skickats till alla ägare och innehavare av (banlagen 22 § 3 mom.):

	- de fastigheter från vilka det enligt planen ska inlösas område,
	- de fastigheter på vars område det bildas skydds- eller frisiktsområden,
	- de fastigheter till vars område det grundas någon annan rättighet eller
	- de fastigheter som gränsar till järnvägsområdet.
(sv) Maanomistustietojen mukaan omistatte kiinteistön suunnitelma-alueella. Mikäli kiinteistönne on vuokrattu, toivomme, että tiedotatte suunnitelman nähtäville asettamisesta vuokralaisianne.
Trafikledsverket behandlar personuppgifter som är nödvändiga för utarbetandet av planen. Om du vill veta mer om trafikledsplaneringens dataskyddspolicy, bekanta dig med sektionen om dataskydd på webbplatsen https://vayla.fi/sv/trafikledsverket/kontaktuppgifter/dataskyddspolicy



Teppo ProjektipäällikköProjektledareVäylävirasto
Mer information om planen 
Testi Teppo (Helsingfors), 
tel. 029, test(at)vayla.fi 
(sv) Jakelu


(sv) Erillisen jakelun mukaan(sv) Jakelun osoitetiedot on haettu kiinteistötietojärjestelmästä ja yritystietojärjestelmästä(sv) Tiedoksi(sv) Trafikledsverket kirjaamoVAYLA/123


"
`;

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf rata vaylavirasto osoitetiedoilla vahainen menettely 1`] = `
"VäylävirastoPL 3300521 HELSINKITessa TestiläHenrikintie 14 B00370 HELSINKIVAYLA/123













Ilmoitus suunnitelman nähtäville asettamisesta
Hyvä suunnittelualueen kiinteistönomistaja,
Väylävirasto on laatinut ratalain (110/2007) mukaisen ratasuunnitelman: Projekti 1.
Ratasuunnitelman osalta kyse on ratalain 23 §:n mukaisesta vähäisestä rautatien parantamisesta, joka ei muuta paikallisia liikenneolosuhteita ja jonka vaikutukset ovat muutenkin vähäiset.
Hankkeen kuvaus
Suunnitelma pidetään yleisesti nähtävänä 1.1.2024 - 8.2.2024 osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo.



Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus (ratalaki 22 § ja 23 §). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 8.2.2024 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo tai toimittamalla se Väyläviraston kirjaamoon osoitteeseen kirjaamo@vayla.fi. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus VAYLA/123.



Tämä ilmoitus on lähetetty kaikille niille kiinteistön omistajille ja haltijoille (ratalaki 22 § 3 mom):

	- joiden kiinteistöltä suunnitelman mukaan lunastetaan aluetta,
	- joiden kiinteistön alueelle muodostuu suoja- tai näkemäalue,
	- joiden kiinteistön alueeseen perustetaan muu oikeus tai
	- joiden kiinteistö rajoittuu rautatiealueeseen.
Maanomistustietojen mukaan omistatte kiinteistön suunnitelma-alueella. Mikäli kiinteistönne on vuokrattu, toivomme, että tiedotatte suunnitelman nähtäville asettamisesta vuokralaisianne.
Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.vayla.fi/tietosuoja.



Teppo ProjektipäällikköProjektipäällikköVäylävirasto
Lisätietoja antaa 
Testi Teppo (Helsinki), 
puh. 029, test(at)vayla.fi 



JakeluErillisen jakelun mukaanJakelun osoitetiedot on haettu kiinteistötietojärjestelmästä ja yritystietojärjestelmästäTiedoksiVäyläviraston kirjaamoVAYLA/123


"
`;

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf tie ely osoitetiedoilla eu 1`] = `
"VäylävirastoPL 3300521 HELSINKITessa TestiläHenrikintie 14 B00370 HELSINKIELY/456













Ilmoitus suunnitelman nähtäville asettamisesta
Hyvä suunnittelualueen kiinteistönomistaja,
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen tiesuunnitelman: Projekti 1.
Hankkeen kuvaus
Suunnitelma pidetään yleisesti nähtävänä 1.1.2024 - 8.2.2024 osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo.



Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus. (LjMTL 27§). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 8.2.2024 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo tai toimittamalla se Uudenmaan ELY-keskuksen kirjaamoon osoitteeseen kirjaamo@ely.fi. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus ELY/456.



Tämä ilmoitus on lähetetty kaikille niille kiinteistön omistajille ja haltijoille (LjMTL 27 § 3 mom):

	- joiden kiinteistöltä suunnitelman mukaan lunastetaan aluetta,
	- joiden kiinteistön alueelle muodostuu suoja- tai näkemäalue,
	- joiden kiinteistön alueeseen perustetaan muu oikeus tai
	- joiden kiinteistö rajoittuu tiealueeseen.
Maanomistustietojen mukaan omistatte kiinteistön suunnitelma-alueella. Mikäli kiinteistönne on vuokrattu, toivomme, että tiedotatte suunnitelman nähtäville asettamisesta vuokralaisianne.
Uudenmaan ELY-keskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.ely-keskus.fi/tietosuoja-ja-henkilotietojen-kasittely.



Teppo ProjektipäällikköProjektipäällikköUudenmaan ELY-keskus
Lisätietoja antaa 
Testi Teppo (Helsinki), 
puh. 029, test(at)vayla.fi 
Jakelu


Erillisen jakelun mukaanJakelun osoitetiedot on haettu kiinteistötietojärjestelmästä ja yritystietojärjestelmästäTiedoksiUudenmaan ELY-keskuksen kirjaamoELY/456


"
`;

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf tie vaylavirasto ei osoitetta 1`] = `
"VAYLA/123



Ilmoitus suunnitelman nähtäville asettamisesta
Hyvä suunnittelualueen kiinteistönomistaja,
Väylävirasto on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen tiesuunnitelman: Projekti 1.
Hankkeen kuvaus
Suunnitelma pidetään yleisesti nähtävänä 1.1.2024 - 8.2.2024 osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo.



Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus. (LjMTL 27§). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 8.2.2024 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo tai toimittamalla se Väyläviraston kirjaamoon osoitteeseen kirjaamo@vayla.fi. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus VAYLA/123.



Tämä ilmoitus on lähetetty kaikille niille kiinteistön omistajille ja haltijoille (LjMTL 27 § 3 mom):

	- joiden kiinteistöltä suunnitelman mukaan lunastetaan aluetta,
	- joiden kiinteistön alueelle muodostuu suoja- tai näkemäalue,
	- joiden kiinteistön alueeseen perustetaan muu oikeus tai
	- joiden kiinteistö rajoittuu tiealueeseen.
Maanomistustietojen mukaan omistatte kiinteistön suunnitelma-alueella. Mikäli kiinteistönne on vuokrattu, toivomme, että tiedotatte suunnitelman nähtäville asettamisesta vuokralaisianne.
Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.vayla.fi/tietosuoja.



Teppo ProjektipäällikköProjektipäällikköVäylävirasto
Lisätietoja antaa 
Testi Teppo (Helsinki), 
puh. 029, test(at)vayla.fi 
JakeluErillisen jakelun mukaanJakelun osoitetiedot on haettu kiinteistötietojärjestelmästä ja yritystietojärjestelmästäTiedoksiVäyläviraston kirjaamo"
`;

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf tie vaylavirasto osoitetiedoilla 1`] = `
"VäylävirastoPL 3300521 HELSINKITessa TestiläHenrikintie 14 B00370 HELSINKIVAYLA/123













Ilmoitus suunnitelman nähtäville asettamisesta
Hyvä suunnittelualueen kiinteistönomistaja,
Väylävirasto on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen tiesuunnitelman: Projekti 1.
Hankkeen kuvaus
Suunnitelma pidetään yleisesti nähtävänä 1.1.2024 - 8.2.2024 osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo.



Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus. (LjMTL 27§). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 8.2.2024 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo tai toimittamalla se Väyläviraston kirjaamoon osoitteeseen kirjaamo@vayla.fi. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus VAYLA/123.



Tämä ilmoitus on lähetetty kaikille niille kiinteistön omistajille ja haltijoille (LjMTL 27 § 3 mom):

	- joiden kiinteistöltä suunnitelman mukaan lunastetaan aluetta,
	- joiden kiinteistön alueelle muodostuu suoja- tai näkemäalue,
	- joiden kiinteistön alueeseen perustetaan muu oikeus tai
	- joiden kiinteistö rajoittuu tiealueeseen.
Maanomistustietojen mukaan omistatte kiinteistön suunnitelma-alueella. Mikäli kiinteistönne on vuokrattu, toivomme, että tiedotatte suunnitelman nähtäville asettamisesta vuokralaisianne.
Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.vayla.fi/tietosuoja.



Teppo ProjektipäällikköProjektipäällikköVäylävirasto
Lisätietoja antaa 
Testi Teppo (Helsinki), 
puh. 029, test(at)vayla.fi 
Jakelu


Erillisen jakelun mukaanJakelun osoitetiedot on haettu kiinteistötietojärjestelmästä ja yritystietojärjestelmästäTiedoksiVäyläviraston kirjaamoVAYLA/123


"
`;

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf tie vaylavirasto osoitetiedoilla ruotsi 1`] = `
"VäylävirastoPL 3300521 HELSINKITessa TestiläHenrikintie 14 B00370 HELSINKIVAYLA/123













(sv) Ilmoitus suunnitelman nähtäville asettamisesta
Bästa fastighetsägare i planeringsområdet,
Trafikledsverket har utarbetat en vägplan enligt lagen om trafiksystem och landsvägar (503/2005): Projekti 1 på svenska.
Hankkeen kuvaus på svenska
Planen hålls offentligt framlagd 1.1.2024 - 8.2.2024 på adressen https://localhost:3000/sv/s/lyhytOsoite/nahtavillaolo.



Fastighetsägare och andra sakägare samt de vars boende, arbete eller övriga förhållanden påverkas av planen har möjlighet att göra en anmärkning med anledning av planen. (27 § i lagen om trafiksystem och landsvägar). Anmärkningen ska göras före utgången av den tid under vilken planen är framlagd, senast 8.2.2024.
Anmärkningen kan göras på adressen https://localhost:3000/sv/s/lyhytOsoite/nahtavillaolo eller genom att skicka den till Trafikledsverket registratorskontor på adressen kirjaamo@vayla.fi. Till en anmärkning som skickas till registratorskontoret ska VAYLA/123 fogas.



Detta tillkännagivande har skickats till alla ägare och innehavare av (lagen om trafiksystem och landsvägar 27 § 3 mom. ):

	- de fastigheter från vilka det enligt planen ska inlösas område,
	- de fastigheter på vars område det bildas skydds- eller frisiktsområden,
	- de fastigheter till vars område det grundas någon annan rättighet eller
	- de fastigheter som gränsar till vägområdet.
(sv) Maanomistustietojen mukaan omistatte kiinteistön suunnitelma-alueella. Mikäli kiinteistönne on vuokrattu, toivomme, että tiedotatte suunnitelman nähtäville asettamisesta vuokralaisianne.
Trafikledsverket behandlar personuppgifter som är nödvändiga för utarbetandet av planen. Om du vill veta mer om trafikledsplaneringens dataskyddspolicy, bekanta dig med sektionen om dataskydd på webbplatsen https://vayla.fi/sv/trafikledsverket/kontaktuppgifter/dataskyddspolicy



Teppo ProjektipäällikköProjektledareVäylävirasto
Mer information om planen 
Testi Teppo (Helsingfors), 
tel. 029, test(at)vayla.fi 



(sv) Jakelu(sv) Erillisen jakelun mukaan(sv) Jakelun osoitetiedot on haettu kiinteistötietojärjestelmästä ja yritystietojärjestelmästä(sv) Tiedoksi(sv) Trafikledsverket kirjaamoVAYLA/123


"
`;

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf tie vaylavirasto osoitetiedoilla vahainen menettely 1`] = `
"VäylävirastoPL 3300521 HELSINKITessa TestiläHenrikintie 14 B00370 HELSINKIVAYLA/123













Ilmoitus suunnitelman nähtäville asettamisesta
Hyvä suunnittelualueen kiinteistönomistaja,
Väylävirasto on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen tiesuunnitelman: Projekti 1.
Tiesuunnitelman osalta kyse on lain liikennejärjestelmästä ja maanteistä 28 §:n mukaisesta vähäisestä maantien parantamisesta, joka ei muuta paikallisia liikenneolosuhteita ja jonka vaikutukset ovat muutenkin vähäiset.
Hankkeen kuvaus
Suunnitelma pidetään yleisesti nähtävänä 1.1.2024 - 8.2.2024 osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo.



Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus (LjMTL 27 § ja 28 §). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 8.2.2024 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo tai toimittamalla se Väyläviraston kirjaamoon osoitteeseen kirjaamo@vayla.fi. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus VAYLA/123.



Tämä ilmoitus on lähetetty kaikille niille kiinteistön omistajille ja haltijoille (LjMTL 27 § 3 mom):

	- joiden kiinteistöltä suunnitelman mukaan lunastetaan aluetta,
	- joiden kiinteistön alueelle muodostuu suoja- tai näkemäalue,
	- joiden kiinteistön alueeseen perustetaan muu oikeus tai
	- joiden kiinteistö rajoittuu tiealueeseen.
Maanomistustietojen mukaan omistatte kiinteistön suunnitelma-alueella. Mikäli kiinteistönne on vuokrattu, toivomme, että tiedotatte suunnitelman nähtäville asettamisesta vuokralaisianne.
Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.vayla.fi/tietosuoja.



Teppo ProjektipäällikköProjektipäällikköVäylävirasto
Lisätietoja antaa 



Testi Teppo (Helsinki), 
puh. 029, test(at)vayla.fi 
JakeluErillisen jakelun mukaanJakelun osoitetiedot on haettu kiinteistötietojärjestelmästä ja yritystietojärjestelmästäTiedoksiVäyläviraston kirjaamoVAYLA/123


"
`;

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf tie vaylavirasto vanha 1`] = `
"VAYLA/123



Projekti 1
Hyvä suunnittelualueen kiinteistönomistaja,
Väylävirasto on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen tiesuunnitelman: Projekti 1.
Tiesuunnitelman osalta kyse on lain liikennejärjestelmästä ja maanteistä 28 §:n mukaisesta vähäisestä maantien parantamisesta, joka ei muuta paikallisia liikenneolosuhteita ja jonka vaikutukset ovat muutenkin vähäiset.
Suunnitelma pidetään yleisesti nähtävillä 1.1.2024 - 8.2.2024 osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo.



Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus (LjMTL 27 § ja 28 §).
Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 8.2.2024 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo tai toimittamalla se Väyläviraston kirjaamoon osoitteeseen kirjaamo@vayla.fi. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus VAYLA/123.



Tämä ilmoitus on lähetetty kaikille niille kiinteistön omistajille ja haltijoille (LjMTL 27 § 3 mom):

	- joiden kiinteistöltä suunnitelman mukaan lunastetaan aluetta,
	- joiden kiinteistön alueelle muodostuu suoja- tai näkemäalue,
	- joiden kiinteistön alueeseen perustetaan muu oikeus tai
	- joiden kiinteistö rajoittuu tiealueeseen.
Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.vayla.fi/tietosuoja.



Lisätietoja antaa 
Testi Teppo (Helsinki), 
puh. 029, test(at)vayla.fi 
"
`;

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf yleinen ely osoitetiedoilla 1`] = `
"VäylävirastoPL 3300521 HELSINKITessa TestiläHenrikintie 14 B00370 HELSINKIELY/456













Ilmoitus suunnitelman nähtäville asettamisesta
Hyvä suunnittelualueen kiinteistönomistaja,
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen yleissuunnitelman: Projekti 1.
Hankkeen kuvaus
Suunnitelma pidetään yleisesti nähtävänä 1.1.2024 - 8.2.2024 osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo.



Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus. (LjMTL 27§). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 8.2.2024 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo tai toimittamalla se Uudenmaan ELY-keskuksen kirjaamoon osoitteeseen kirjaamo@ely.fi. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus ELY/456.



Tämä ilmoitus on lähetetty kaikille niille kiinteistön omistajille ja haltijoille, joiden kiinteistön alueelle suunniteltu uusi tielinjaus sijoittuu (LjMTL 27 § 3 mom).
Maanomistustietojen mukaan omistatte kiinteistön suunnitelma-alueella. Mikäli kiinteistönne on vuokrattu, toivomme, että tiedotatte suunnitelman nähtäville asettamisesta vuokralaisianne.
Uudenmaan ELY-keskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.ely-keskus.fi/tietosuoja-ja-henkilotietojen-kasittely.



Teppo ProjektipäällikköProjektipäällikköUudenmaan ELY-keskus
Lisätietoja antaa 
Testi Teppo (Helsinki), 
puh. 029, test(at)vayla.fi 
JakeluErillisen jakelun mukaanJakelun osoitetiedot on haettu kiinteistötietojärjestelmästä ja yritystietojärjestelmästäTiedoksiUudenmaan ELY-keskuksen kirjaamo"
`;

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf yleinen vaylavirasto osoitetiedoilla 1`] = `
"VäylävirastoPL 3300521 HELSINKITessa TestiläHenrikintie 14 B00370 HELSINKIVAYLA/123













Ilmoitus suunnitelman nähtäville asettamisesta
Hyvä suunnittelualueen kiinteistönomistaja,
Väylävirasto on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen yleissuunnitelman: Projekti 1.
Hankkeen kuvaus
Suunnitelma pidetään yleisesti nähtävänä 1.1.2024 - 8.2.2024 osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo.



Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus. (LjMTL 27§). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 8.2.2024 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo tai toimittamalla se Väyläviraston kirjaamoon osoitteeseen kirjaamo@vayla.fi. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus VAYLA/123.



Tämä ilmoitus on lähetetty kaikille niille kiinteistön omistajille ja haltijoille, joiden kiinteistön alueelle suunniteltu uusi tielinjaus sijoittuu (LjMTL 27 § 3 mom).
Maanomistustietojen mukaan omistatte kiinteistön suunnitelma-alueella. Mikäli kiinteistönne on vuokrattu, toivomme, että tiedotatte suunnitelman nähtäville asettamisesta vuokralaisianne.
Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.vayla.fi/tietosuoja.



Teppo ProjektipäällikköProjektipäällikköVäylävirasto
Lisätietoja antaa 
Testi Teppo (Helsinki), 
puh. 029, test(at)vayla.fi 
JakeluErillisen jakelun mukaanJakelun osoitetiedot on haettu kiinteistötietojärjestelmästä ja yritystietojärjestelmästäTiedoksiVäyläviraston kirjaamo"
`;

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf yleinen vaylavirasto osoitetiedoilla ruotsi 1`] = `
"VäylävirastoPL 3300521 HELSINKITessa TestiläHenrikintie 14 B00370 HELSINKIVAYLA/123













(sv) Ilmoitus suunnitelman nähtäville asettamisesta
Bästa fastighetsägare i planeringsområdet,
Trafikledsverket har utarbetat en utredningsplan enligt lagen om trafiksystem och landsvägar (503/2005): Projekti 1 på svenska.
Hankkeen kuvaus på svenska
Planen hålls offentligt framlagd 1.1.2024 - 8.2.2024 på adressen https://localhost:3000/sv/s/lyhytOsoite/nahtavillaolo.



Fastighetsägare och andra sakägare samt de vars boende, arbete eller övriga förhållanden påverkas av planen har möjlighet att göra en anmärkning med anledning av planen. (27 § i lagen om trafiksystem och landsvägar). Anmärkningen ska göras före utgången av den tid under vilken planen är framlagd, senast 8.2.2024.
Anmärkningen kan göras på adressen https://localhost:3000/sv/s/lyhytOsoite/nahtavillaolo eller genom att skicka den till Trafikledsverket registratorskontor på adressen kirjaamo@vayla.fi. Till en anmärkning som skickas till registratorskontoret ska VAYLA/123 fogas.



Detta meddelande har skickats till alla ägare och innehavare av de fastigheter på vars område den planerade nya vägen är belägen (lagen om trafiksystem och landsvägar 27 § 3 mom. ).
(sv) Maanomistustietojen mukaan omistatte kiinteistön suunnitelma-alueella. Mikäli kiinteistönne on vuokrattu, toivomme, että tiedotatte suunnitelman nähtäville asettamisesta vuokralaisianne.
Trafikledsverket behandlar personuppgifter som är nödvändiga för utarbetandet av planen. Om du vill veta mer om trafikledsplaneringens dataskyddspolicy, bekanta dig med sektionen om dataskydd på webbplatsen https://vayla.fi/sv/trafikledsverket/kontaktuppgifter/dataskyddspolicy



Teppo ProjektipäällikköProjektledareVäylävirasto
Mer information om planen 
Testi Teppo (Helsingfors), 
tel. 029, test(at)vayla.fi 
(sv) Jakelu(sv) Erillisen jakelun mukaan(sv) Jakelun osoitetiedot on haettu kiinteistötietojärjestelmästä ja yritystietojärjestelmästä(sv) Tiedoksi


(sv) Trafikledsverket kirjaamoVAYLA/123


"
`;

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf yleinen vaylavirasto osoitetiedoilla vahainen menettely 1`] = `
"VäylävirastoPL 3300521 HELSINKITessa TestiläHenrikintie 14 B00370 HELSINKIVAYLA/123













Ilmoitus suunnitelman nähtäville asettamisesta
Hyvä suunnittelualueen kiinteistönomistaja,
Väylävirasto on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen yleissuunnitelman: Projekti 1.
Yleissuunnitelman osalta kyse on lain liikennejärjestelmästä ja maanteistä 28 §:n mukaisesta vähäisestä maantien parantamisesta, joka ei muuta paikallisia liikenneolosuhteita ja jonka vaikutukset ovat muutenkin vähäiset.
Hankkeen kuvaus
Suunnitelma pidetään yleisesti nähtävänä 1.1.2024 - 8.2.2024 osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo.



Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus (LjMTL 27 § ja 28 §). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 8.2.2024 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo tai toimittamalla se Väyläviraston kirjaamoon osoitteeseen kirjaamo@vayla.fi. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus VAYLA/123.



Tämä ilmoitus on lähetetty kaikille niille kiinteistön omistajille ja haltijoille, joiden kiinteistön alueelle suunniteltu uusi tielinjaus sijoittuu (LjMTL 27 § 3 mom).
Maanomistustietojen mukaan omistatte kiinteistön suunnitelma-alueella. Mikäli kiinteistönne on vuokrattu, toivomme, että tiedotatte suunnitelman nähtäville asettamisesta vuokralaisianne.
Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.vayla.fi/tietosuoja.



Teppo ProjektipäällikköProjektipäällikköVäylävirasto
Lisätietoja antaa 
Testi Teppo (Helsinki), 
puh. 029, test(at)vayla.fi 
Jakelu


Erillisen jakelun mukaanJakelun osoitetiedot on haettu kiinteistötietojärjestelmästä ja yritystietojärjestelmästäTiedoksiVäyläviraston kirjaamoVAYLA/123


"
`;
